syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.quarkus.example";
option java_outer_classname = "PongProto";

package io.quarkus.example;

service PongService {
    rpc SayPong (PongRequest) returns (PongReply) {}
}

message PongRequest {
}

message PongReply {
    string message = 1;
}